--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sergio Berto - Bootcamp BIARQ</title>
-    <link rel="stylesheet" href="/CSS/styles.css" />
+    <link rel="stylesheet" href="../Ejercicio 1/CSS/styles.css" />
   </head>
   <body>
     <main>
@@ -18,9 +18,9 @@
         </p>
         <a href="https://www.youtube.com" target="_blank"><b>YOUTUBE.COM</b></a>
         <div class="image-container">
-          <img src="/IMG/1.jfif" alt="image" />
-          <img src="/IMG/2.jfif" alt="image" />
-          <img src="/IMG/1.jfif" alt="image" />
+          <img src="../Ejercicio 1/IMG/1.jfif" alt="image" />
+          <img src="../Ejercicio 1/IMG/2.jfif" alt="image" />
+          <img src="../Ejercicio 1/IMG/1.jfif" alt="image" />
         </div>
         <div class="contact-form">
           <h2>Contacto</h2>
